--- a/src/assets/styles/partials/components/_pill.scss
+++ b/src/assets/styles/partials/components/_pill.scss
@@ -21,7 +21,7 @@
   }
 
   &[data-size="sm"] {
-    padding: functions.spacing("-4") functions.spacing("-2");
+    padding: functions.spacing("-3") functions.spacing("-2");
     @include mixins.font($size: "sm");
   }
 
